--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 body {
     margin: 0;
-    font-size: 36px;
-    font-size: 22px; 
+    font-size: 18px; 
     font-style: normal; 
-    font-weight: 700; 
+    font-weight: 400; 
     line-height: 30px; 
-    font-family: bjpg; 
+    font-family: bjpg, sans-serif; 
     background-color: rgb(34, 34, 34);
 }
 
@@ -20,16 +19,30 @@ container {
     height: 100vh;
 }
 
-.header, .footer{
+.header {
     height: 65px;
-    #background-color: lightgray;
-    text-align: center;
     line-height: 65px;
+    margin: 0 3%;
+    display: flex;
+}
+
+.header div{
+    flex: 1;
+}
+
+.header div a {
+    padding-right:20px;
 }
 
 a {
     color: white;
     text-decoration: none;
+}
+
+#name {
+    font-weight: 700;
+    font-size: 22px;
+    text-align: center;
 }
 
 .img-container {
